wip styling posts for web

--- a/src/components/CreatePost/CreatePost.css
+++ b/src/components/CreatePost/CreatePost.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     background-color: #FFFFFF;
-    width: 800px;
+    width: auto;
     height: 137px;
     padding: 16px;
     margin: 16px 0;
