--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -1,9 +1,33 @@
 .Post {
     display: flex;
     flex-direction: column;
-    background-color: blueviolet;
     align-items: flex-start;
-    padding: 1rem;
+    height: 289px;
+    padding: 30px;
+    border: 1px solid #CED7E7;
+    border-radius: 10px;
+}
+
+.post-header {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 15px;
+}
+
+.post-header-text {
+    display: flex;
+    flex-direction: column;
+    margin-left: 16px;
+}
+
+.post-header-text > p {
+    margin: 0;
+}
+
+img {
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
 }
 
 .post-counts {
