--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    height: 289px;
     padding: 30px;
     border: 1px solid #CED7E7;
     border-radius: 10px;
@@ -21,8 +20,17 @@
     margin-left: 16px;
 }
 
+h2 {
+    font-size: 18px;
+    margin: 0;
+    color: rgba(18, 21, 29, 1);
+}
+
 .post-header-text > p {
     margin: 0;
+    font-size: 12px;
+    color: rgba(18, 21, 29, 0.6)
+;
 }
 
 img {
@@ -31,11 +39,25 @@ img {
     border-radius: 50%;
 }
 
+.post-body {
+    margin: 16px 0;
+    font-size: 12px;
+    color: rgba(18, 21, 29, 0.87);
+}
+
 .post-counts {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .post-counts > p {
-    margin-right: 1rem;
+    font-size: 10px;
+    margin-right: 13px;
+}
+
+.icon {
+    height: 16px;
+    width: 12px;
+    margin-right: 10px;
 }
