--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -8,56 +8,47 @@
     margin-bottom: 16px;
 }
 
-.post-header {
+.comment {
     display: flex;
-    flex-direction: row;
-    margin-bottom: 15px;
-}
-
-.post-header-text {
-    display: flex;
-    flex-direction: column;
-    margin-left: 16px;
-}
-
-h2 {
-    font-size: 18px;
-    margin: 0;
-    color: rgba(18, 21, 29, 1);
-}
-
-.post-header-text > p {
-    margin: 0;
-    font-size: 12px;
-    color: rgba(18, 21, 29, 0.6)
-;
-}
-
-img {
-    height: 60px;
-    width: 60px;
-    border-radius: 50%;
-}
-
-.post-body {
-    margin: 16px 0;
-    font-size: 12px;
-    color: rgba(18, 21, 29, 0.87);
-}
-
-.post-counts {
-    display: flex;
-    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
+    background-color: rgba(241, 244, 248, 1);
+    border-radius: 100px;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0 16px;
+    font-size: 14px;
+    color: rgba(18, 21, 29, 0.6);
+    margin-bottom: 16px;
 }
 
-.post-counts > p {
-    font-size: 10px;
-    margin-right: 13px;
+.comment-text {
+    background: none;
+    padding: 10px 16px;
+    border: none;
+    height: auto;
+    width: 100%;
+    font-size: inherit;
+    font-family: inherit;
 }
 
-.icon {
-    height: 16px;
-    width: 12px;
-    margin-right: 10px;
+input:focus {
+    outline: none;
+}
+
+.comment-left {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.comment-icon {
+    height: 18px;
+    width: 18px;
+}
+
+.post-comment-divider {
+    width: 100%;
+    border-top: 1px solid #CED7E7;
+    margin-bottom: 16px;
 }
