--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,12 @@
 }
 
 .container {
-  width: 800px;
+  width: 45vw;
+  padding: 0 1rem;
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    width: 100%;
+  }
 }
